--- a/src/basic_cleaning/conda.yml
+++ b/src/basic_cleaning/conda.yml
@@ -1,12 +1,8 @@
-name: data_check
+name: basic_cleaning
 channels:
   - conda-forge
   - defaults
 dependencies:
-  - python=3.9.0
-  - pandas=2.1.3
-  - pytest=6.2.2
-  - scipy=1.5.2
   - pip=23.3.1
   - pip:
       - mlflow==2.8.1
